# blog-backend

./: Cargo.toml  LICENSE
migrations/: 20250916192955_creates_schema.sql
src/: config.rs  db.rs  main.rs  utils.rs
src/handlers/: auth.rs  blogs.rs  mod.rs  user.rs  users.rs
src/middlewares/: auth.rs
src/models/: blog.rs  mod.rs  post.rs  post_tag.rs  tag.rs  user.rs
src/routes/: auth.rs  blogs.rs  users.rs
