[package]
name = "blog-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = {version = "0.8.4", features = ["tokio"]}
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
sqlx = {version = "0.8.6", features = ["postgres", "runtime-tokio", "time", "uuid", "chrono"]}
tokio = {version = "1.47.1", features = ["full"]}
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20", features = ["fmt", "env-filter"]}
uuid = { version = "1.18.1", features = ["v4", "serde"] }
